--- a/themes/miho/_config.yml
+++ b/themes/miho/_config.yml
@@ -42,11 +42,11 @@ menu:
 social:
   home:
     title: fanzhao
-    url: //xxx.com
+    url: //fanzhao321.site
     target: true
   github:
     title: Github
-    url: //github.com/wongminho
+    url: //github.com/fanzhao123
     target: true
   weibo:
     title: Weibo
@@ -107,7 +107,18 @@ reward:
 changyan_appid: false
 changyan_appkey: false
 # 友言，输入id
-youyan_id: false
+youyan_id: true
+valine:
+    enable: true
+    appId: ewz5nIfFewii4cS06yRtVbWR-gzGzoHsz
+    appKey: XYAsefHzk6NB5uUjR4CtYR2p
+    notify: false
+    verify: false
+    avatar: mp
+    placeholder: 123
+    guest_info: nick,mail,link
+    pageSize: 10
+    lang: zh-cn
 # disqus
 disqus: false
 # gitment  https://github.com/imsun/gitment
@@ -134,4 +145,4 @@ access_counter:
   site_pv: 总访问量：
 
 # Copyright Information | 版权信息
-copyright: 2018 MinHow
+copyright: 2018 范钊
